# shifter

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: file-format.md
res/: words.txt
src/: cli.rs  file_format.rs  interactive.rs  lib.rs  main.rs  passphrase_generator.rs
src/crypto/: chacha20.rs  hmac.rs  mod.rs  pbkdf2.rs  sha256.rs  utils.rs
tests/: integration_tests.rs
