[package]
name = "shifter"
version = "0.1.0"
edition = "2021"
description = "File encryption tool"

[dependencies]
rand = "0.8.5"
thiserror = "2.0.9"
rayon = "1.10.0"
clap = { version = "4.5.23", features = ["derive"] }
inquire = "0.7.5"
fuzzy-matcher = "0.3.7"
anstyle = "1.0.11"

# Used for differential fuzz testing
[dev-dependencies]
assert_cmd = "2.0.16"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
